@@ -1,3 +1,7 @@
+2015-04-14  Jon Turney  <jon.turney@dronecode.org.uk>
+
+	* windows-nat.c (thread_rec): Ignore 'Invalid Handle' errors.
+
 2015-04-14  Gary Benson <gbenson@redhat.com>
 
 	* jit.c (mem_bfd_iovec_stat): Zero supplied buffer.
